--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,9 +3,9 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Academic # Website name
-baseurl: '' # Website URL
-copyright: '' # Footer text, e.g. '© {year} Me'
+title: William Ball # Website name
+baseurl: 'https://wpball.com' # Website URL
+copyright: '© {year} William Ball."' # Footer text, e.g. '© {year} Me'
 
 ############################
 ## LANGUAGE
