--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,8 +3,8 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: William Ball # Website name
-baseurl: 'https://wpball.com' # Website URL
+title: William Ball - Research Fellow # Website name
+baseurl: 'https://will-ball.netlify.app' # Website URL
 copyright: '© {year} William Ball."' # Footer text, e.g. '© {year} Me'
 
 ############################
