--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,20 +4,17 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Home
-    url: '#about'
-    weight: 10
   - name: Posts
     url: '#posts'
-    weight: 20
+    weight: 35
   - name: Projects
     url: '#projects'
     weight: 30
-  - name: Talks
-    url: '#talks'
+  - name: Experience
+    url: '#experience'
     weight: 40
-  - name: Publications
-    url: '#featured'
+  - name: Courses
+    url: '#courses'
     weight: 50
   - name: Contact
     url: '#contact'
@@ -25,6 +22,6 @@ main:
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
-#  - name: CV
-#    url: uploads/resume.pdf
-#    weight: 70
+  - name: "CV"
+    url: files/cv.html
+    weight: 70
