--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,8 +13,8 @@ main:
   - name: Experience
     url: '#experience'
     weight: 40
-  - name: Courses
-    url: '#courses'
+  - name: Training
+    url: '#training'
     weight: 50
   - name: Contact
     url: '#contact'
