--- a/.github/workflows/updater-wip.yml
+++ b/.github/workflows/updater-wip.yml
@@ -12,3 +12,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: wowchemy/gh-action-updater@v1
+        with:
+          feed-url: https://wowchemy.com/blog/index.xml
+          readme-section: news
