--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,7 +3,7 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: William Ball # Website name
+title: William Ball | Population Health Researcher # Website name
 baseurl: 'https://wpball.com' # Website URL
 copyright: '© Copyright {year} William Ball.' # Footer text, e.g. '© {year} Me'
 
