--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "hugo --gc --minify -b $URL CI= npm run build"
+  command = "CI= npm run build"
   publish = "public"
 
 [build.environment]
